<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="my_title">My Nanodegree Apps!</string>


    <!-- App Names -->
    <string name="spotify_name">Spotify Streamer</string>
    <string name="superDuo1_name">Scores App</string>
    <string name="superDuo2_name">Library App</string>
    <string name="builtIt_name">Build It Bigger</string>
    <string name="xyzReader_name">XYZ Reader</string>
    <string name="myApp_name">Capstone: My Own App</string>
</resources>
